--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "test": "node --test"
   },
   "author": "Tal Kohavy",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.54.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "eslint-plugin-sort-exports": "^0.8.0",
+    "prettier": "^3.1.0"
+  }
 }
