added exports to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,28 @@
   "scripts": {
     "test": "node --test"
   },
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.cjs"
+    },
+    "./addItemToList": "./lib/addItemToList.js",
+    "./areObjectsEqual": "./lib/areObjectsEqual.js",
+    "./decodeBase64": "./lib/decodeBase64.js",
+    "./deepMerge": "./lib/deepMerge.js",
+    "./encodeBase64": "./lib/encodeBase64.js",
+    "./getArrMaxValue": "./lib/getArrMaxValue.js",
+    "./isNullish": "./lib/isNullish.js",
+    "./isObject": "./lib/isObject.js",
+    "./isObjEmpty": "./lib/isObjEmpty.js",
+    "./removeItemFromList": "./lib/removeItemFromList.js",
+    "./removeItemFromListByIndex": "./lib/removeItemFromListByIndex.js",
+    "./replaceItemOnListWith": "./lib/replaceItemOnListWith.js",
+    "./times": "./lib/times.js",
+    "./wrapInDebounce": "./lib/wrapInDebounce.js",
+    "./wrapInThrottle": "./lib/wrapInThrottle.js"
+  },
   "author": "Tal Kohavy",
   "license": "ISC",
   "devDependencies": {
