--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,8 +33,8 @@
     }
   },
   "overrides": [
-    { "files": ["*.html"], "parser": "html" }
-    // { "files": ["*.js", "*.jsx", "*.ts", "*.tsx"], "parser": "@typescript-eslint/parser" } // i don't know what the default parser is, but it didn't work well. Only with "@typescript-eslint/parser" as the default parser eslint is able to lint these files properly.
+    { "files": ["*.html"], "parser": "html" },
+    { "files": ["*.js", "*.jsx", "*.ts", "*.tsx"], "parser": "@typescript-eslint/parser" } // i don't know what the default parser is, but it didn't work well. Only with "@typescript-eslint/parser" as the default parser eslint is able to lint these files properly.
   ],
   "env": {
     "node": true, // Solved "XXX not being recognized". XXX: module, require, process
