--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "node --test"
   },
   "sideEffects": false,
+  "contributors": ["Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"],
   "exports": {
     ".": {
       "import": "./index.js",
