--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     branches:
-      - "master"
+      - 'master'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
-          cache: "pnpm"
+          cache: 'pnpm'
 
       # Step 3: Run pnpm install
       - run: pnpm install --frozen-lockfile
@@ -32,8 +32,10 @@ jobs:
       - run: pnpm run lint && pnpm run build
 
       # Step 5: Run publish
-      - name: "Create Release Pull Request or Publish"
+      - name: 'Create Release Pull Request or Publish'
         id: changesets
         uses: changesets/action@v1
         with:
           publish: pnpm run build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
