docs(changeset): I think types should be recognized now

--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "@talkohavy/lodash",
   "version": "1.0.11",
   "description": "A bunch of lodash-like methods",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "module": "index.mjs",
+  "types": "index.d.ts",
   "type": "module",
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "lint": "tsc",
+    "version-up": "pnpm changeset",
     "test": "node --test"
   },
   "sideEffects": false,
-  "contributors": [
-    "Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"
-  ],
+  "contributors": ["Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"],
   "repository": {
     "type": "git",
     "url": "https://github.com/talkohavy/lodash"
