eslint taken from luckylove-monolith

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,32 @@
 /**
- * Need to install:
- * - prettier // <--- Though you won't use it within this config file, without installing it your IDE won't be able format)
+ * To have this eslintrc file working you need to install the following packages as dev-dependency:
+ * - prettier // Have your IDE format using prettier! The rest of the rules in this config simply align with prettier's built-in rules (and, of course, your custom rules).
  * - eslint
  * - eslint-plugin-import
  * - eslint-import-resolver-typescript
  * - @typescript-eslint/parser
  * - eslint-plugin-sort-exports
  * - eslint-plugin-jsdoc
- * npm install -D prettier eslint eslint-plugin-import eslint-import-resolver-typescript @typescript-eslint/parser eslint-plugin-sort-exports eslint-plugin-jsdoc
+ *
+ * // Here is a how-to-install example using pnpm:
+ * pnpm add -wD prettier eslint eslint-plugin-import eslint-import-resolver-typescript @typescript-eslint/parser eslint-plugin-sort-exports eslint-plugin-jsdoc
  */
 {
   "root": true,
   "plugins": ["import", "sort-exports", "jsdoc"],
   "extends": ["eslint:recommended"], // <--- I would like to get rid of this soon and move it to "plugins".
-  "settings": { "import/resolver": { "typescript": { "alwaysTryTypes": true, "project": "./jsconfig.json" } } }, // <--- Solved `import useDirection from './AppHooks/useDirection';` not being recognized. useDirection was a file with a .jsx extension.
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./jsconfig.json" // <--- use your jsconfig.json configuration file to align eslint on how to resolve imports. For example, it solved `import useMyHook from './AppHooks/useMyHook';` not being recognized, where useMyHook was a file with a .jsx extension.
+      }
+    }
+  },
   "parserOptions": {
     "ecmaVersion": "latest", // <--- latest is currently on version 2023 or 14. Solved module not being recognized.
-    "sourceType": "module", // <--- Solved import & export not being recognized.
-    "ecmaFeatures": {
-      // "jsx": true, // <--- Solved jsx files not being linted.
-      "arrowFunctions": true,
-      "forOf": true,
-      "modules": true,
-      "classes": true,
-      "globalReturn": true,
-      "generators": true,
-      "destructuring": true,
-      "defaultParams": true,
-      "restParams": true,
-      "experimentalObjectRestSpread": true,
-      "spread": true,
-      "templateStrings": true
-    }
+    "sourceType": "module" // <--- Solved import & export not being recognized.
+    // "ecmaFeatures": { "jsx": true } // <--- this once solved .jsx files not being linted but I guess not anymore. I see that .jsx files are being linted out-of-the-box these days.
   },
   "overrides": [
     { "files": ["*.html"], "parser": "html" },
@@ -43,17 +38,7 @@
     "jest": true, // Solved jest keywords like test & expect.
     "es6": true // Solved Promise is not defined.
   },
-  "globals": {
-    "myCache": true,
-    "redisClient": true,
-    "defaultUser": true,
-    "ValidationError": true,
-    "UnauthorizedError": true,
-    "ForbiddenError": true,
-    "NotFoundError": true,
-    "InternalServerError": true,
-    "ServerError": true
-  },
+  // "globals": {},
   "rules": {
     // NOTE: This is where you can Override default settings coming from the plugins!
 
@@ -102,6 +87,7 @@
     "object-shorthand": "error", // <--- turns { lastName: lastName } to { lastName }.
     "prefer-arrow-callback": ["error", { "allowUnboundThis": true }], // <--- "error" could collide with prettier. The collision occurs when the "arrow-body-style" eslint rule is set to "error" and the "arrowParens" prettier rule set to "avoid". However, since my "arrowParens" rule is set to "always", we're good. There's no collision. Turns this `foo(function(a) { return a; })` into this `foo((a) => a)`.
     "prefer-destructuring": "error", // <--- turns this: const aaa = props.aaa; to this: const { aaa } = props;
+    "prefer-const": "error", // <--- turns this "let i = 3" into this "const i = 3".
     "prefer-template": "error", // <--- turns this: name + value, to `${name}${value}`
     "quotes": [
       // <--- Force single quotes. "error" could collide with prettier. This rule was deprecated in ESLint v8.53.0
@@ -189,55 +175,55 @@
     // #######################
     // Rule Set 5: jsdoc rules
     // #######################
-    "jsdoc/check-access": 1, // Recommended
-    "jsdoc/check-alignment": 1, // Recommended
-    // "jsdoc/check-examples": 1,
-    "jsdoc/check-indentation": 1,
-    "jsdoc/check-line-alignment": 1,
-    "jsdoc/check-param-names": 1, // Recommended
-    "jsdoc/check-property-names": 1, // Recommended
-    "jsdoc/check-syntax": 1,
-    "jsdoc/check-tag-names": 1, // Recommended
-    "jsdoc/check-types": 1, // Recommended
-    "jsdoc/check-values": 1, // Recommended
-    "jsdoc/empty-tags": 1, // Recommended
-    "jsdoc/implements-on-classes": 1, // Recommended
-    "jsdoc/informative-docs": 1,
+    "jsdoc/check-access": "warn", // Recommended
+    "jsdoc/check-alignment": "warn", // Recommended
+    "jsdoc/check-indentation": "warn",
+    "jsdoc/check-line-alignment": "warn",
+    "jsdoc/check-param-names": "warn", // Recommended
+    "jsdoc/check-property-names": "warn", // Recommended
+    "jsdoc/check-syntax": "warn",
+    "jsdoc/check-tag-names": "warn", // Recommended
+    "jsdoc/check-types": "warn", // Recommended
+    "jsdoc/check-values": "warn", // Recommended
+    "jsdoc/empty-tags": "warn", // Recommended
+    "jsdoc/implements-on-classes": "warn", // Recommended
+    "jsdoc/informative-docs": "warn",
     "jsdoc/match-description": ["warn", { "matchDescription": "^\n?([*A-Z`\\d_][\\s\\S]*[.?!`]\\s*)?$" }],
-    "jsdoc/multiline-blocks": 1, // Recommended
-    "jsdoc/no-bad-blocks": 1,
-    "jsdoc/no-blank-block-descriptions": 1,
-    "jsdoc/no-defaults": 1,
-    // "jsdoc/no-missing-syntax": 1,
-    "jsdoc/no-multi-asterisks": 1, // Recommended
-    // "jsdoc/no-restricted-syntax": 1,
-    // "jsdoc/no-types": 1,
-    // "jsdoc/no-undefined-types": 1, // Recommended
-    "jsdoc/require-asterisk-prefix": 1,
-    // "jsdoc/require-description": 1,
+    "jsdoc/multiline-blocks": "warn", // Recommended
+    "jsdoc/no-bad-blocks": "warn",
+    "jsdoc/no-blank-block-descriptions": "warn",
+    "jsdoc/no-defaults": "warn",
+    "jsdoc/no-multi-asterisks": "warn", // Recommended
+    "jsdoc/require-asterisk-prefix": "warn",
     "jsdoc/require-description-complete-sentence": ["warn", { "abbreviations": ["Mr."] }],
-    // "jsdoc/require-example": 1,
-    // "jsdoc/require-file-overview": 1,
-    "jsdoc/require-hyphen-before-param-description": 1,
-    // "jsdoc/require-jsdoc": 1, // Recommended
-    // "jsdoc/require-param": 1, // Recommended
-    // "jsdoc/require-param-description": 1, // Recommended
-    "jsdoc/require-param-name": 1, // Recommended
-    "jsdoc/require-param-type": 1, // Recommended
-    "jsdoc/require-property": 1, // Recommended
-    // "jsdoc/require-property-description": 1, // Recommended
-    "jsdoc/require-property-name": 1, // Recommended
-    "jsdoc/require-property-type": 1, // Recommended
-    // "jsdoc/require-returns": 1, // Recommended
-    "jsdoc/require-returns-check": 1, // Recommended
-    // "jsdoc/require-returns-description": 1, // Recommended
-    "jsdoc/require-returns-type": 1, // Recommended
-    "jsdoc/require-throws": 1,
-    "jsdoc/require-yields": 1, // Recommended
-    "jsdoc/require-yields-check": 1, // Recommended
-    "jsdoc/sort-tags": 1,
-    "jsdoc/tag-lines": 1, // Recommended
-    "jsdoc/valid-types": 1 // Recommended
+    "jsdoc/require-hyphen-before-param-description": "warn",
+    "jsdoc/require-param-name": "warn", // Recommended
+    "jsdoc/require-param-type": "warn", // Recommended
+    "jsdoc/require-property": "warn", // Recommended
+    "jsdoc/require-property-name": "warn", // Recommended
+    "jsdoc/require-property-type": "warn", // Recommended
+    "jsdoc/require-returns-check": "warn", // Recommended
+    "jsdoc/require-returns-type": "warn", // Recommended
+    "jsdoc/require-throws": "warn",
+    "jsdoc/require-yields": "warn", // Recommended
+    "jsdoc/require-yields-check": "warn", // Recommended
+    "jsdoc/sort-tags": "warn",
+    "jsdoc/tag-lines": "warn", // Recommended
+    "jsdoc/valid-types": "warn" // Recommended
+    // "jsdoc/check-examples": "warn",
+    // "jsdoc/no-missing-syntax": "warn",
+    // "jsdoc/no-restricted-syntax": "warn",
+    // "jsdoc/no-types": "warn",
+    // "jsdoc/no-undefined-types": "warn", // Recommended
+    // "jsdoc/require-description": "warn",
+    // "jsdoc/require-example": "warn",
+    // "jsdoc/require-file-overview": "warn",
+    // "jsdoc/require-jsdoc": "warn", // Recommended
+    // "jsdoc/require-param": "warn", // Recommended
+    // "jsdoc/require-param-description": "warn", // Recommended
+    // "jsdoc/require-property-description": "warn", // Recommended
+    // "jsdoc/require-returns": "warn", // Recommended
+    // "jsdoc/require-returns-description": "warn", // Recommended
 
     // #####################
     // Rule Set 6: Rule Bank
