--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@talkohavy/lodash",
   "version": "1.0.14",
+  "private": true,
   "description": "A bunch of lodash-like methods",
   "main": "index.js",
   "module": "index.js",
