--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@talkohavy/lodash",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "A bunch of lodash-like methods",
   "main": "index.js",
   "module": "index.js",
@@ -10,6 +10,9 @@
     "build": "tsup --config tsup.config.js",
     "lint": "eslint -c ./.eslintrc.json \"./lib/**/*.js\"",
     "test": "node --test",
+    "format": "prettier --write package.json",
+    "preversion": "npm run format",
+    "postversion": "npm run format",
     "pr1eversion": "npm test",
     "ve1rsion": "npm run build",
     "po1stversion": "git push && git push --tags && cd dist && npm publish"
