--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - "**"
+      - '**'
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20.x
-          cache: "pnpm"
+          cache: 'pnpm'
 
       # Step 3: Run pnpm install
       - run: pnpm install --frozen-lockfile
