--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@talkohavy/lodash",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "A bunch of lodash-like methods",
   "main": "index.js",
   "module": "index.js",
@@ -17,7 +17,9 @@
     "prepare": "husky install"
   },
   "sideEffects": false,
-  "contributors": ["Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"],
+  "contributors": [
+    "Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/talkohavy/lodash"
