--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@talkohavy/lodash",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "description": "A bunch of lodash-like methods",
   "main": "index.js",
   "module": "index.js",
@@ -13,13 +13,11 @@
     "format": "prettier --write .",
     "preversion": "npm test",
     "version": "npm run build",
-    "postversion": "git push && git push --tags && cd dist && npm run publish",
+    "postversion": "git push && git push --tags && cd dist && npm publish",
     "prepare": "husky install"
   },
   "sideEffects": false,
-  "contributors": [
-    "Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"
-  ],
+  "contributors": ["Tal Kohavy <talkohavy@gmail.com> (@Tal Kohavy)"],
   "repository": {
     "type": "git",
     "url": "https://github.com/talkohavy/lodash"
