--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write .",
     "preversion": "npm test",
     "version": "npm run build",
-    "postversion": "git push && git push --tags && cd dist && npm publish",
+    "postversion": "git push && git push --tags",
     "prepare": "husky install"
   },
   "sideEffects": false,
