--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint -c ./.eslintrc.json \"./lib/**/*.js\"",
     "test": "node --test",
     "format": "prettier --write .",
-    "preversion": "npm run format && npm test",
+    "preversion": "npm test",
     "version": "npm run format && npm run build",
     "postversion": "git push && git push --tags",
     "prepare": "husky install"
