--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@talkohavy/lodash",
-  "version": "1.0.21",
+  "version": "1.0.40",
   "description": "A bunch of lodash-like methods",
   "main": "index.js",
   "module": "index.js",
@@ -10,9 +10,10 @@
     "build": "tsup --config tsup.config.js",
     "lint": "eslint -c ./.eslintrc.json \"./lib/**/*.js\"",
     "test": "node --test",
-    "format": "prettier --write .",
+    "format": "prettier . --write",
+    "check-format": "prettier . --check",
     "preversion": "npm test",
-    "version": "npm run build",
+    "version": "npm run format && npm run build",
     "postversion": "git push && git push --tags && cd dist && npm publish",
     "prepare": "husky install"
   },
