--- a/package.json
+++ b/package.json
@@ -62,15 +62,10 @@
     "email": "talkohavy@gmail.com"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.54.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-ezlint": "^1.0.8",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
+    "tsup": "^8.0.1"
   }
 }
