renamed lib to src

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "build": "tsup --config tsup.config.js",
-    "lint": "eslint -c ./.eslintrc.json \"./lib/**/*.js\"",
+    "lint": "eslint -c ./.eslintrc.json \"./src/**/*.js\"",
     "test": "node --test",
     "format": "prettier . --write",
     "check-format": "prettier . --check",
