--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "email": "talkohavy@gmail.com"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "eslint": "^8.54.0",
     "eslint-plugin-ezlint": "^1.0.12",
     "husky": "^8.0.3",
